# ct_eus_vessel_reconstruction_2

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: default.yml
docs/: technical_route_v0.1.md  technical_route_v0.2_phase_inference.md  technical_route_v0.3_reconstruction.md  technical_route_v0.4_evaluation_and_direction.md  technical_route_v0.5_strong_vessel_filter.md
docs/iterations/: CT-0021-v0.1.md  CT-0021-v0.2-phase-inference.md  CT-0021-v0.3-reconstruction.md  CT-0021-v0.3b-conservative.md  CT-0021-v0.4-expanded-exclusion.md  CT-0021-v0.5-strong-vessel-filter.md
docs/superpowers/plans/: 2026-06-24-v0.1-bootstrap.md  2026-06-24-v0.5-strong-vessel-filter.md
src/ct_eus_vessel/: __init__.py  candidates.py  cli.py  config.py  dicom_index.py  evaluation.py  geometry.py  iteration.py  phase.py  reconstruction.py  thresholds.py
tests/: test_candidates.py  test_cli.py  test_config.py  test_evaluation.py  test_geometry.py  test_iteration_log.py  test_phase.py  test_reconstruction.py  test_thresholds.py
