[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ct-eus-vessel"
version = "0.1.0"
description = "CT-EUS localization vessel segmentation and reconstruction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pydicom",
  "pyyaml",
  "scipy",
  "scikit-image",
  "simpleitk",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ct-eus-vessel = "ct_eus_vessel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
